--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="MT-Performance eSport.
+  Das eSport Team des Unternehmens MT-Performance aus Steinau an der Straße. iRacing Team">
   <title>MT-Performance eSport</title>
   <base href="/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
