add canonical url

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="MT-Performance eSport.
   Das eSport Team des Unternehmens MT-Performance aus Steinau an der Straße. iRacing Team">
+  <link rel="canonical" href="https://www.mt-performance-esport.de" />
   <title>MT-Performance eSport</title>
   <base href="/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
